# IPC_WEB

./: CMakeLists.txt
cmake/toolchains/: linux-arm.cmake
src/: CMakeLists.txt  api_handler.h  audio_api.cpp  common.cpp  common.h  event_api.cpp  event_api.h  export.h  gb28181_api.cpp  gb28181_api.h  http_request.h  http_response.cpp  http_response.h  image_api.cpp  image_api.h  main.cpp  network_api.cpp  network_api.h  osd_api.cpp  osd_api.h  peripherals_api.cpp  ptz_api.cpp  ptz_api.h  rest_api.cpp  rest_api.h  roi_api.cpp  storage_api.cpp  stream_api.cpp  stream_api.h  system_api.cpp  system_api.h  video_api.cpp  video_api.h
src/objects/: tcpip_param.h
www/: index.html  polyfills-es2015.5fc5fa6030ff0b97da32.js  polyfills-es5.b0ed0eb7d025d8dc4f1a.js  runtime-es5.0811dcefd377500b5b1a.js  scripts.ff3a583f0468bbe90d00.js
www/assets/i18n/: en-US.json  zh-CN.json
www/assets/wxplayer/: wxplayer.js
